// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when association subclass has duplicate property name across dependent namespaces should have validation failures 1`] = `"Association Subclass SubclassName redeclares property DuplicatePropertyName of base Association."`;

exports[`when association subclass has duplicate property name across dependent namespaces should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 24,
  "tokenText": "bool",
}
`;

exports[`when association subclass has duplicate property name across dependent namespaces should have validation failures 3`] = `"Association Subclass SubclassName redeclares property DuplicatePropertyName2 of base Association."`;

exports[`when association subclass has duplicate property name across dependent namespaces should have validation failures 4`] = `
Object {
  "column": 4,
  "line": 28,
  "tokenText": "bool",
}
`;

exports[`when association subclass has duplicate property name should have validation failures 1`] = `"Association Subclass SubclassName redeclares property DuplicatePropertyName of base Association."`;

exports[`when association subclass has duplicate property name should have validation failures 2`] = `
Object {
  "column": 4,
  "line": 22,
  "tokenText": "bool",
}
`;

exports[`when association subclass has duplicate property name should have validation failures 3`] = `"Association Subclass SubclassName redeclares property DuplicatePropertyName2 of base Association."`;

exports[`when association subclass has duplicate property name should have validation failures 4`] = `
Object {
  "column": 4,
  "line": 26,
  "tokenText": "bool",
}
`;
